welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:9: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^SnakeBuggle:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:14: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^SnakeBuggle:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:18: warning: enclosing method posFinale has result type Unit: return value discarded
    return false
    ^SnakeBuggle:37: error: value unary_! is not a member of Unit
    while (!posFinale()){
           ^